--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
 }
 
 img {
-    width: 248.75px;
-    height: 200px;
     display: block;
 }
 
@@ -25,24 +23,12 @@ img {
     
 }
 
-
-input {
-    grid-area: search;
-}
-
-input {
-    grid-template-areas: 
-    "search search search";
-}
-
 .gallery {
-    margin: 0px 200px 50px 200px;
-    max-width: 1300px;
+    max-width: 1024px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: 150px repeat(3, minmax(200px, 1fr));
-    grid-row-gap: 15px;
-    grid-column-gap: 15px;
-    grid-template-areas: 
-        "search search search search";
+    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+    grid-gap: 50px;
+    justify-content: center;
+    margin: 50px auto;
+
 }
