Deletes 1fr from .gallery's minmax, & adds max-content

--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ img {
 .gallery {
     max-width: 1024px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
-    grid-gap: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, max-content));;
+    grid-gap: 15px;
     justify-content: center;
     margin: 50px auto;
 
